# financial_newsletter

./: .gitignore  README.md  config.yaml  index.html  main.py  playground.py  pyproject.toml  requirements.txt  subscribe.html  subscribers.csv  test_newsletter.py  update_subscribers.py
.github/workflows/: daily_newsletter.yml  send_newsletter.yml  update_subscribers.yml
docs/: index.html  latest.html  subscribe.html
docs/outputs/: report_2025-04-14.json  report_2025-04-14.md  report_2025-04-15.html  report_2025-04-15.json  report_2025-04-16.html  report_2025-04-16.json  report_2025-04-16.md  report_2025-04-17.html  report_2025-04-17.json  report_2025-04-17.md  report_2025-04-18.html  report_2025-04-18.json  report_2025-04-18.md  report_2025-04-20.html  report_2025-04-20.json  report_2025-04-20.md  report_2025-04-21.html  report_2025-04-21.json  report_2025-04-21.md  report_2025-04-22.html  report_2025-04-22.json  report_2025-04-22.md  report_2025-04-23.html  report_2025-04-23.json  report_2025-04-23.md  report_2025-04-24.html  report_2025-04-24.json  report_2025-04-24.md  report_2025-04-25.html  report_2025-04-25.json  report_2025-04-25.md  report_2025-04-27.html  report_2025-04-27.json  report_2025-04-27.md  report_2025-04-28.html  report_2025-04-28.json  report_2025-04-28.md  report_2025-04-29.html  report_2025-04-29.json  report_2025-04-29.md  (+435 more)
finance_newsletter/: __init__.py
finance_newsletter/chains/: macro_landscape.py  market_news.py  market_reaction.py  (+3 more)
outputs/: report_2025-04-14.html  report_2025-04-14.md  report_2025-04-15.html  report_2025-04-15.md
(+3 files in other folders)
