[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_newsletter"
version = "0.1.0"
description = "AI-powered financial newsletter generator"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Burki"}
]
dependencies = [
    "langchain>=0.0.267",
    "langchain-community>=0.0.10",
    "pyyaml>=6.0.2",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "typing-extensions>=4.5.0"
    "dotenv"
    "langchain-perplexity"
    "langchain-openai"
    "markdown"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0"
]

[tool.setuptools]
packages = ["finance_newsletter"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
